# img2ufo

./: .gitignore  Cargo.toml  LICENSE  README.md
autoresearch/: program.md  run_scan_experiment.sh
context/: scan-quality-strategy.md
references/: README.md
references/specimen-001/: assignments.json  metadata.json
src/: gasp.rs  gf_latin_core.rs  main.rs  manifest.rs  pipeline.rs  ufo_builder.rs
